added navbar,banner and responsive for mobile device

--- a/index.html
+++ b/index.html
@@ -4,17 +4,49 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MY SECOND ASSIGNMENT</title>
+    <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/responsive.css">
+    <link rel="stylesheet" href="./css/responsive.css">
 </head>
 <body>
-    <header>
-
+    <header class="container">
+        <!-- navbar start -->
+        <nav>
+            <div class="nav-logo">
+                <img src="images/logo.png" alt="">
+            </div>
+            <div class="nav-menu">
+                <ul>
+                    <li>
+                        <a href="#" class="home">Home</a>
+                    </li>
+                    <li>
+                        <a href="#" class="shop">Shop</a>
+                    </li>
+                    <li>
+                        <a href="#" class="shop">About us</a>
+                    </li>
+                </ul>
+                <div class="nav-menu-cart">
+                    <p><span><i class="fa-solid fa-cart-shopping"></i></span> Cart ($56)</p>
+                </div>
+            </div>
+        </nav>
+        <!-- banner start -->
+         <section class="banner">
+            <div class="bannerContent">
+                <h1 class="bannerTitle">ALWAYS <span>FRESH <br> FLOWERS</span></h1>
+                <p class="bannerDescription">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh flowers that are perfect for any occasion. </p>
+            </div>
+            <div class="bannerImg">
+                <img src="images/hero-flower.png" alt="">
+            </div>
+         </section>
     </header>
-    <main>
+    <main class="container">
 
     </main>
-    <footer>
+    <footer class="container">
 
     </footer>
 </body>
