added plants section and responsive for mobild device

--- a/index.html
+++ b/index.html
@@ -43,8 +43,79 @@
             </div>
          </section>
     </header>
-    <main class="container">
-
+    <main>
+        <!-- plants start -->
+         <section class="plants container">
+            <h2 class="headingTitle"> <span>Our</span> Plants</h2>
+            <p class="description">Indulge your senses with the beauty and fragrance of our fresh flower shop. From <br> classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+            <div class="plants-card">
+                <div class="card">
+                    <img src="images/sample-flower-image.png" alt="">
+                    <div class="plants-child">
+                        <h6 class="plants-title">Lily Blossom</h6>
+                        <p class="plants-price">20 USD</p>
+                        <button class="plants-btn">ADD TO CART</button>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="images/sample-flower-image.png" alt="">
+                    <div class="plants-child">
+                        <h6 class="plants-title">Lily Blossom</h6>
+                        <p class="plants-price">20 USD</p>
+                        <button class="plants-btn">ADD TO CART</button>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="images/sample-flower-image.png" alt="">
+                    <div class="plants-child">
+                        <h6 class="plants-title">Lily Blossom</h6>
+                        <p class="plants-price">20 USD</p>
+                        <button class="plants-btn">ADD TO CART</button>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="images/sample-flower-image.png" alt="">
+                    <div class="plants-child">
+                        <h6 class="plants-title">Lily Blossom</h6>
+                        <p class="plants-price">20 USD</p>
+                        <button class="plants-btn">ADD TO CART</button>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="images/sample-flower-image.png" alt="">
+                    <div class="plants-child">
+                        <h6 class="plants-title">Lily Blossom</h6>
+                        <p class="plants-price">20 USD</p>
+                        <button class="plants-btn">ADD TO CART</button>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="images/sample-flower-image.png" alt="">
+                    <div class="plants-child">
+                        <h6 class="plants-title">Lily Blossom</h6>
+                        <p class="plants-price">20 USD</p>
+                        <button class="plants-btn">ADD TO CART</button>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="images/sample-flower-image.png" alt="">
+                    <div class="plants-child">
+                        <h6 class="plants-title">Lily Blossom</h6>
+                        <p class="plants-price">20 USD</p>
+                        <button class="plants-btn">ADD TO CART</button>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="images/sample-flower-image.png" alt="">
+                    <div class="plants-child">
+                        <h6 class="plants-title">Lily Blossom</h6>
+                        <p class="plants-price">20 USD</p>
+                        <button class="plants-btn">ADD TO CART</button>
+                    </div>
+                </div>
+                
+            </div>
+         </section>
     </main>
     <footer class="container">
 
