added flower section and responsive for mobile device

--- a/index.html
+++ b/index.html
@@ -116,6 +116,21 @@
                 
             </div>
          </section>
+         <!-- flower lover start -->
+          <section class="flowerLover container">
+            <div class="flowerImg">
+                <img src="images/flower-store.png" class="store" alt="">
+                <img src="images/trusted-badge.png" class="badge" alt="">
+            </div>
+            <div class="flowerContent">
+                <h3 class="flowerTitle">Flower & Plants Lover</h3>
+                <ul>
+                    <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
+                    <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
+                    <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
+                </ul>
+            </div>
+          </section>
     </main>
     <footer class="container">
 
