added deals section and responsive for mobile device

--- a/index.html
+++ b/index.html
@@ -131,6 +131,31 @@
                 </ul>
             </div>
           </section>
+          <!-- deals start -->
+           <section class="deals container">
+            <h2 class="headingTitle"> <span>Latest</span> Deals</h2>
+            <p class="description">Indulge your senses with the beauty and fragrance of our fresh flower shop. From <br> classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+            <div class="deal">
+                <div class="deals-card">
+                    <div class="childOne">
+                        <div class="bloomPlant">
+                            <h4 class="bloomTitle">60% Off | Bloom Plant</h4>
+                            <p class="bloomDescription">Shop Now</p>
+                        </div>
+                        <div class="anaPlant">
+                            <h4 class="anaTitle">30% Off | Ana Plant</h4>
+                            <p class="anaDescription">Shop Now</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="deals-card">
+                    <div class="zaboPlant">
+                       <h4 class="zaboTitle">25% Off | Zabo Plant</h4>
+                        <p class="zaboDescription">Shop Now</p>
+                    </div>
+                </div>
+            </div>
+           </section>
     </main>
     <footer class="container">
 
