added join section and responsive for mobile device

--- a/index.html
+++ b/index.html
@@ -156,6 +156,17 @@
                 </div>
             </div>
            </section>
+           <!-- join start -->
+            <section class="join">
+                <div class="container">
+                    <h2 class="joinTitle">Join the colorful Bunch</h2>
+                    <form action="">
+                        <input type="email" name="" id="" placeholder="Write email">
+                    <input type="button" value="Subscribe">
+                    </form>
+                    <!-- <button class="subs">Subscribe</button> -->
+                </div>
+            </section>
     </main>
     <footer class="container">
 
