added footer section and responsive for mobile divce

--- a/index.html
+++ b/index.html
@@ -164,12 +164,38 @@
                         <input type="email" name="" id="" placeholder="Write email">
                     <input type="button" value="Subscribe">
                     </form>
-                    <!-- <button class="subs">Subscribe</button> -->
                 </div>
             </section>
     </main>
     <footer class="container">
-
+        <div class="footerCard">
+            <div class="footerChildOne">
+                <img src="images/logo.png" alt="">
+                <p class="footerDescription">Indulge your senses with the beauty and fragrance of our fresh flower shop. </p>
+            </div>
+            <div class="footerChild">
+                <div class="footerChildCard">
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">About Us</a></li>
+                        <li><a href="#">Blog</a></li>
+                        <li><a href="#">FAQ</a></li>
+                        <li><a href="#">Contact Us</a></li>
+                        <li><a href="#">Features</a></li>
+                        <li><a href="#">Pricing</a></li>
+                        <li><a href="#">Privacy Policy</a></li>
+                        <li><a href="#">Terms of Service</a></li>
+                        <li><a href="#">Help Center</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="footerChild">
+                <img src="images/icon-linkedin.png" alt="">
+                <img src="images/icon-twitter.png" alt="">
+                <img src="images/icon-facebook.png" alt="">
+                <img src="images/icon-youtube.png" alt="">
+            </div>
+        </div>
     </footer>
 </body>
 </html>
