modify some code css and responsive file

--- a/index.html
+++ b/index.html
@@ -1,201 +1,235 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MY SECOND ASSIGNMENT</title>
-    <link rel="stylesheet" href="css/all.min.css">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="./css/responsive.css">
-</head>
-<body>
+    <link rel="stylesheet" href="css/all.min.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="./css/responsive.css" />
+  </head>
+  <body>
     <header class="container">
-        <!-- navbar start -->
-        <nav>
-            <div class="nav-logo">
-                <img src="images/logo.png" alt="">
-            </div>
-            <div class="nav-menu">
-                <ul>
-                    <li>
-                        <a href="#" class="home">Home</a>
-                    </li>
-                    <li>
-                        <a href="#" class="shop">Shop</a>
-                    </li>
-                    <li>
-                        <a href="#" class="shop">About us</a>
-                    </li>
-                </ul>
-                <div class="nav-menu-cart">
-                    <p><span><i class="fa-solid fa-cart-shopping"></i></span> Cart ($56)</p>
-                </div>
-            </div>
-        </nav>
-        <!-- banner start -->
-         <section class="banner">
-            <div class="bannerContent">
-                <h1 class="bannerTitle">ALWAYS <span>FRESH <br> FLOWERS</span></h1>
-                <p class="bannerDescription">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh flowers that are perfect for any occasion. </p>
-            </div>
-            <div class="bannerImg">
-                <img src="images/hero-flower.png" alt="">
-            </div>
-         </section>
+      <!-- navbar start -->
+      <nav>
+        <div class="nav-logo">
+          <img src="images/logo.png" alt="" />
+        </div>
+        <div class="nav-menu">
+          <ul>
+            <li>
+              <a href="#" class="home">Home</a>
+            </li>
+            <li>
+              <a href="#" class="shop">Shop</a>
+            </li>
+            <li>
+              <a href="#" class="shop">About us</a>
+            </li>
+          </ul>
+          <div class="nav-menu-cart">
+            <p>
+              <span><i class="fa-solid fa-cart-shopping"></i></span> Cart ($56)
+            </p>
+          </div>
+        </div>
+      </nav>
+      <!-- banner start -->
+      <section class="banner">
+        <div class="bannerContent">
+          <h1 class="bannerTitle">
+            ALWAYS
+            <span
+              >FRESH <br />
+              FLOWERS</span
+            >
+          </h1>
+          <p class="bannerDescription">
+            Indulge your senses with the beauty and fragrance of our fresh
+            flower shop. From classic roses to exotic blooms, we offer a wide
+            variety of fresh flowers that are perfect for any occasion.
+          </p>
+        </div>
+        <div class="bannerImg">
+          <img src="images/hero-flower.png" alt="" />
+        </div>
+      </section>
     </header>
     <main>
-        <!-- plants start -->
-         <section class="plants container">
-            <h2 class="headingTitle"> <span>Our</span> Plants</h2>
-            <p class="description">Indulge your senses with the beauty and fragrance of our fresh flower shop. From <br> classic roses to exotic blooms, we offer a wide variety of fresh.</p>
-            <div class="plants-card">
-                <div class="card">
-                    <img src="images/sample-flower-image.png" alt="">
-                    <div class="plants-child">
-                        <h6 class="plants-title">Lily Blossom</h6>
-                        <p class="plants-price">20 USD</p>
-                        <button class="plants-btn">ADD TO CART</button>
-                    </div>
-                </div>
-                <div class="card">
-                    <img src="images/sample-flower-image.png" alt="">
-                    <div class="plants-child">
-                        <h6 class="plants-title">Lily Blossom</h6>
-                        <p class="plants-price">20 USD</p>
-                        <button class="plants-btn">ADD TO CART</button>
-                    </div>
-                </div>
-                <div class="card">
-                    <img src="images/sample-flower-image.png" alt="">
-                    <div class="plants-child">
-                        <h6 class="plants-title">Lily Blossom</h6>
-                        <p class="plants-price">20 USD</p>
-                        <button class="plants-btn">ADD TO CART</button>
-                    </div>
-                </div>
-                <div class="card">
-                    <img src="images/sample-flower-image.png" alt="">
-                    <div class="plants-child">
-                        <h6 class="plants-title">Lily Blossom</h6>
-                        <p class="plants-price">20 USD</p>
-                        <button class="plants-btn">ADD TO CART</button>
-                    </div>
-                </div>
-                <div class="card">
-                    <img src="images/sample-flower-image.png" alt="">
-                    <div class="plants-child">
-                        <h6 class="plants-title">Lily Blossom</h6>
-                        <p class="plants-price">20 USD</p>
-                        <button class="plants-btn">ADD TO CART</button>
-                    </div>
-                </div>
-                <div class="card">
-                    <img src="images/sample-flower-image.png" alt="">
-                    <div class="plants-child">
-                        <h6 class="plants-title">Lily Blossom</h6>
-                        <p class="plants-price">20 USD</p>
-                        <button class="plants-btn">ADD TO CART</button>
-                    </div>
-                </div>
-                <div class="card">
-                    <img src="images/sample-flower-image.png" alt="">
-                    <div class="plants-child">
-                        <h6 class="plants-title">Lily Blossom</h6>
-                        <p class="plants-price">20 USD</p>
-                        <button class="plants-btn">ADD TO CART</button>
-                    </div>
-                </div>
-                <div class="card">
-                    <img src="images/sample-flower-image.png" alt="">
-                    <div class="plants-child">
-                        <h6 class="plants-title">Lily Blossom</h6>
-                        <p class="plants-price">20 USD</p>
-                        <button class="plants-btn">ADD TO CART</button>
-                    </div>
-                </div>
-                
+      <!-- plants start -->
+      <section class="plants container">
+        <h2 class="headingTitle"><span>Our</span> Plants</h2>
+        <p class="description">
+          Indulge your senses with the beauty and fragrance of our fresh flower
+          shop. From <br />
+          classic roses to exotic blooms, we offer a wide variety of fresh.
+        </p>
+        <div class="plants-card">
+          <div class="card">
+            <img src="images/sample-flower-image.png" alt="" />
+            <div class="plants-child">
+              <h6 class="plants-title">Lily Blossom</h6>
+              <p class="plants-price">20 USD</p>
+              <button class="plants-btn">ADD TO CART</button>
             </div>
-         </section>
-         <!-- flower lover start -->
-          <section class="flowerLover container">
-            <div class="flowerImg">
-                <img src="images/flower-store.png" class="store" alt="">
-                <img src="images/trusted-badge.png" class="badge" alt="">
+          </div>
+          <div class="card">
+            <img src="images/sample-flower-image.png" alt="" />
+            <div class="plants-child">
+              <h6 class="plants-title">Lily Blossom</h6>
+              <p class="plants-price">20 USD</p>
+              <button class="plants-btn">ADD TO CART</button>
             </div>
-            <div class="flowerContent">
-                <h3 class="flowerTitle">Flower & Plants Lover</h3>
-                <ul>
-                    <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
-                    <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
-                    <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
-                </ul>
+          </div>
+          <div class="card">
+            <img src="images/sample-flower-image.png" alt="" />
+            <div class="plants-child">
+              <h6 class="plants-title">Lily Blossom</h6>
+              <p class="plants-price">20 USD</p>
+              <button class="plants-btn">ADD TO CART</button>
             </div>
-          </section>
-          <!-- deals start -->
-           <section class="deals container">
-            <h2 class="headingTitle"> <span>Latest</span> Deals</h2>
-            <p class="description">Indulge your senses with the beauty and fragrance of our fresh flower shop. From <br> classic roses to exotic blooms, we offer a wide variety of fresh.</p>
-            <div class="deal">
-                <div class="deals-card">
-                    <div class="childOne">
-                        <div class="bloomPlant">
-                            <h4 class="bloomTitle">60% Off | Bloom Plant</h4>
-                            <p class="bloomDescription">Shop Now</p>
-                        </div>
-                        <div class="anaPlant">
-                            <h4 class="anaTitle">30% Off | Ana Plant</h4>
-                            <p class="anaDescription">Shop Now</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="deals-card">
-                    <div class="zaboPlant">
-                       <h4 class="zaboTitle">25% Off | Zabo Plant</h4>
-                        <p class="zaboDescription">Shop Now</p>
-                    </div>
-                </div>
+          </div>
+          <div class="card">
+            <img src="images/sample-flower-image.png" alt="" />
+            <div class="plants-child">
+              <h6 class="plants-title">Lily Blossom</h6>
+              <p class="plants-price">20 USD</p>
+              <button class="plants-btn">ADD TO CART</button>
             </div>
-           </section>
-           <!-- join start -->
-            <section class="join">
-                <div class="container">
-                    <h2 class="joinTitle">Join the colorful Bunch</h2>
-                    <form action="">
-                        <input type="email" name="" id="" placeholder="Write email">
-                    <input type="button" value="Subscribe">
-                    </form>
-                </div>
-            </section>
+          </div>
+          <div class="card">
+            <img src="images/sample-flower-image.png" alt="" />
+            <div class="plants-child">
+              <h6 class="plants-title">Lily Blossom</h6>
+              <p class="plants-price">20 USD</p>
+              <button class="plants-btn">ADD TO CART</button>
+            </div>
+          </div>
+          <div class="card">
+            <img src="images/sample-flower-image.png" alt="" />
+            <div class="plants-child">
+              <h6 class="plants-title">Lily Blossom</h6>
+              <p class="plants-price">20 USD</p>
+              <button class="plants-btn">ADD TO CART</button>
+            </div>
+          </div>
+          <div class="card">
+            <img src="images/sample-flower-image.png" alt="" />
+            <div class="plants-child">
+              <h6 class="plants-title">Lily Blossom</h6>
+              <p class="plants-price">20 USD</p>
+              <button class="plants-btn">ADD TO CART</button>
+            </div>
+          </div>
+          <div class="card">
+            <img src="images/sample-flower-image.png" alt="" />
+            <div class="plants-child">
+              <h6 class="plants-title">Lily Blossom</h6>
+              <p class="plants-price">20 USD</p>
+              <button class="plants-btn">ADD TO CART</button>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- flower lover start -->
+      <section class="flowerLover container">
+        <div class="flowerImg">
+          <img src="images/flower-store.png" class="store" alt="" />
+          <img src="images/trusted-badge.png" class="badge" alt="" />
+        </div>
+        <div class="flowerContent">
+          <h3 class="flowerTitle">Flower & Plants Lover</h3>
+          <ul>
+            <li>
+              Indulge your senses with the beauty and fragrance of our fresh
+              flower shop. From classic roses to exotic blooms, we offer a wide
+              variety of fresh.
+            </li>
+            <li>
+              Indulge your senses with the beauty and fragrance of our fresh
+              flower shop. From classic roses to exotic blooms, we offer a wide
+              variety of fresh.
+            </li>
+            <li>
+              Indulge your senses with the beauty and fragrance of our fresh
+              flower shop. From classic roses to exotic blooms, we offer a wide
+              variety of fresh.
+            </li>
+          </ul>
+        </div>
+      </section>
+      <!-- deals start -->
+      <section class="deals container">
+        <h2 class="headingTitle"><span>Latest</span> Deals</h2>
+        <p class="description">
+          Indulge your senses with the beauty and fragrance of our fresh flower
+          shop. From <br />
+          classic roses to exotic blooms, we offer a wide variety of fresh.
+        </p>
+        <div class="deal">
+          <div class="deals-card">
+            <div class="childOne">
+              <div class="bloomPlant">
+                <h4 class="bloomTitle">60% Off | Bloom Plant</h4>
+                <p class="bloomDescription">Shop Now</p>
+              </div>
+              <div class="anaPlant">
+                <h4 class="anaTitle">30% Off | Ana Plant</h4>
+                <p class="anaDescription">Shop Now</p>
+              </div>
+            </div>
+          </div>
+          <div class="deals-card">
+            <div class="zaboPlant">
+              <h4 class="zaboTitle">25% Off | Zabo Plant</h4>
+              <p class="zaboDescription">Shop Now</p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- join start -->
+      <section class="join">
+        <div class="container">
+          <h2 class="joinTitle">Join the colorful Bunch</h2>
+          <form action="">
+            <input type="email" name="" id="" placeholder="Write email" />
+            <input type="button" value="Subscribe" />
+          </form>
+        </div>
+      </section>
     </main>
     <footer class="container">
-        <div class="footerCard">
-            <div class="footerChildOne">
-                <img src="images/logo.png" alt="">
-                <p class="footerDescription">Indulge your senses with the beauty and fragrance of our fresh flower shop. </p>
-            </div>
-            <div class="footerChild">
-                <div class="footerChildCard">
-                    <ul>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">About Us</a></li>
-                        <li><a href="#">Blog</a></li>
-                        <li><a href="#">FAQ</a></li>
-                        <li><a href="#">Contact Us</a></li>
-                        <li><a href="#">Features</a></li>
-                        <li><a href="#">Pricing</a></li>
-                        <li><a href="#">Privacy Policy</a></li>
-                        <li><a href="#">Terms of Service</a></li>
-                        <li><a href="#">Help Center</a></li>
-                    </ul>
-                </div>
-            </div>
-            <div class="footerChild">
-                <img src="images/icon-linkedin.png" alt="">
-                <img src="images/icon-twitter.png" alt="">
-                <img src="images/icon-facebook.png" alt="">
-                <img src="images/icon-youtube.png" alt="">
-            </div>
+      <div class="footerCard">
+        <div class="footerChildOne">
+          <img src="images/logo.png" alt="" />
+          <p class="footerDescription">
+            Indulge your senses with the beauty and fragrance of our fresh
+            flower shop.
+          </p>
         </div>
+        <div class="footerChild">
+          <div class="footerChildCard">
+            <ul>
+              <li><a href="#">Home</a></li>
+              <li><a href="#">About Us</a></li>
+              <li><a href="#">Blog</a></li>
+              <li><a href="#">FAQ</a></li>
+              <li><a href="#">Contact Us</a></li>
+              <li><a href="#">Features</a></li>
+              <li><a href="#">Pricing</a></li>
+              <li><a href="#">Privacy Policy</a></li>
+              <li><a href="#">Terms of Service</a></li>
+              <li><a href="#">Help Center</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="footerChild">
+          <img src="images/icon-linkedin.png" alt="" />
+          <img src="images/icon-twitter.png" alt="" />
+          <img src="images/icon-facebook.png" alt="" />
+          <img src="images/icon-youtube.png" alt="" />
+        </div>
+      </div>
     </footer>
-</body>
+  </body>
 </html>
